Add existing file

--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
             });
             document.getElementById('Left').addEventListener('touchstart',Left)
             document.getElementById('Left').addEventListener('touchend',Rotation1)
+            document.getElementById('Right').addEventListener('touchstart',Right)
+            document.getElementById('Right').addEventListener('touchend',Rotation1)
         </script>
     </body>
 </html>
