--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body style="margin: 0; overflow: hidden;">
-        <div align="center" style='position: fixed; top: 10px; width:100%; text-align: right; z-index: 1;'>
+        <div align="center" style='position: fixed; top: 10px; width:100%; text-align: right; z-index: 1;right:15px'>
             <input type=button id="Left" value="Turn Left" />
             <input type=button id="Right" value="Turn Right" onmousedown="Right()" onmouseup="Rotation1()"/>
         </div>
