Add existing file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body style="margin: 0; overflow: hidden;">
         <div align="center" style='position: fixed; top: 10px; width:100%; text-align: right; z-index: 1;right:15px'>
             <input type=button id="Left" value="Turn Left" />
-            <input type=button id="Right" value="Turn Right" onmousedown="Right()" onmouseup="Rotation1()"/>
+            <input type=button id="Right" value="Turn Right"/>
         </div>
         <a-scene
             vr-mode-ui="enabled: false;"
